<?xml version="1.0"?>
<package format="2">
  <name>rosout_print</name>
  <version>0.2.0</version>
  <description>Tool converting rosout_agg messages to log message forms</description>

  <maintainer email="cposteam@clearpath.ai">Clearpath OS Team</maintainer>
  <author email="cposteam@clearpath.ai">Clearpath OS Team</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>

  <test_depend>rostest</test_depend>
</package>
